--- a/thinkmate/package.json
+++ b/thinkmate/package.json
@@ -9,11 +9,14 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@prisma/client": "^6.16.2",
-    "d3": "^7.9.0",
+  "@prisma/client": "^6.16.2",
     "next": "15.5.3",
+    "plotly.js": "^3.1.1",
+    "plotly.js-basic-dist": "^3.1.1",
+    "plotly.js-dist": "^3.1.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-plotly.js": "^2.6.0",
     "three": "^0.180.0"
   },
   "devDependencies": {
