--- a/thinkmate/package.json
+++ b/thinkmate/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@huggingface/transformers": "^3.7.5",
     "@prisma/client": "^6.16.2",
     "next": "15.5.3",
     "plotly.js": "^3.1.1",
