--- a/thinkmate/package.json
+++ b/thinkmate/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@huggingface/transformers": "^3.7.5",
     "@prisma/client": "^6.16.2",
+    "d3-force": "^3.0.0",
     "next": "15.5.3",
     "plotly.js": "^3.1.1",
     "plotly.js-basic-dist": "^3.1.1",
