--- a/thinkmate/package.json
+++ b/thinkmate/package.json
@@ -21,6 +21,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-plotly.js": "^2.6.0",
+    "recharts": "^3.3.0",
     "three": "^0.180.0"
   },
   "devDependencies": {
