--- a/thinkmate/package.json
+++ b/thinkmate/package.json
@@ -14,6 +14,7 @@
     "d3": "^7.9.0",
     "d3-force": "^3.0.0",
     "gsap": "^3.13.0",
+    "motion": "^12.23.24",
     "next": "15.5.3",
     "plotly.js": "^3.1.1",
     "plotly.js-basic-dist": "^3.1.1",
