--- a/thinkmate/package.json
+++ b/thinkmate/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@databricks/sql": "^1.12.0",
     "@huggingface/transformers": "^3.7.5",
     "@prisma/client": "^6.16.2",
     "d3": "^7.9.0",
@@ -16,6 +17,8 @@
     "gsap": "^3.13.0",
     "motion": "^12.23.24",
     "next": "15.5.3",
+    "node-fetch": "^3.3.2",
+    "patch-package": "^8.0.1",
     "plotly.js": "^3.1.1",
     "plotly.js-basic-dist": "^3.1.1",
     "plotly.js-dist": "^3.1.1",
@@ -24,6 +27,7 @@
     "react-plotly.js": "^2.6.0",
     "react-router-dom": "^7.9.5",
     "recharts": "^3.3.0",
+    "swr": "^2.3.6",
     "three": "^0.180.0"
   },
   "devDependencies": {
