--- a/thinkmate/package.json
+++ b/thinkmate/package.json
@@ -14,10 +14,12 @@
     "@prisma/client": "^6.16.2",
     "d3": "^7.9.0",
     "d3-force": "^3.0.0",
+    "express": "^5.1.0",
     "gsap": "^3.13.0",
     "motion": "^12.23.24",
     "next": "15.5.3",
     "node-fetch": "^3.3.2",
+    "ogl": "^1.0.11",
     "patch-package": "^8.0.1",
     "plotly.js": "^3.1.1",
     "plotly.js-basic-dist": "^3.1.1",
