--- a/thinkmate/package.json
+++ b/thinkmate/package.json
@@ -16,6 +16,7 @@
     "d3-force": "^3.0.0",
     "express": "^5.1.0",
     "gsap": "^3.13.0",
+    "lenis": "^1.3.15",
     "motion": "^12.23.24",
     "next": "15.5.3",
     "node-fetch": "^3.3.2",
