--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -58,7 +58,7 @@ EOT
 
       - name: Build and export (thinkmate-rational)
         run: |
-          npx run dev
+          npm run dev
         working-directory: thinkmate-rational
 
       - name: Upload artifact
