Update working directory for build command
Change working directory to 'thinkmate' before running the build command.

--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -58,6 +58,7 @@ EOT
 
       - name: Build and export (thinkmate-rational)
         run: |
+          cd thinkmate
           npm run dev
         working-directory: thinkmate-rational
 
