--- a/.github/workflows/deploy-nextjs-to-pages.yml
+++ b/.github/workflows/deploy-nextjs-to-pages.yml
@@ -33,9 +33,18 @@ jobs:
           cp -R thinkmate thinkmate-rational
           mkdir -p thinkmate-rational/tmp_pages
           if [ -f thinkmate-rational/pages/_app.js ]; then mv thinkmate-rational/pages/_app.js thinkmate-rational/tmp_pages/; fi
-          if [ -f thinkmate-rational/pages/rational.js ]; then mv thinkmate-rational/pages/rational.js thinkmate-rational/tmp_pages/index.js; fi
-          # If no rational page found, fail early
-          if [ ! -f thinkmate-rational/tmp_pages/index.js ]; then echo "rational page not found"; ls -la thinkmate-rational/pages || true; exit 1; fi
+          # Prefer pages/rational.js if present; otherwise treat pages/index.js as the rational page
+          if [ -f thinkmate-rational/pages/rational.js ]; then
+            mv thinkmate-rational/pages/rational.js thinkmate-rational/tmp_pages/index.js
+          elif [ -f thinkmate-rational/pages/index.js ]; then
+            mv thinkmate-rational/pages/index.js thinkmate-rational/tmp_pages/index.js
+          fi
+          # If no rational page found, fail early (print listing for debugging)
+          if [ ! -f thinkmate-rational/tmp_pages/index.js ]; then
+            echo "rational page not found"
+            ls -la thinkmate-rational/pages || true
+            exit 1
+          fi
           rm -rf thinkmate-rational/pages/*
           mv thinkmate-rational/tmp_pages/* thinkmate-rational/pages/
           rmdir thinkmate-rational/tmp_pages || true
@@ -50,7 +59,7 @@ jobs:
             images: { unoptimized: true },
             eslint: { ignoreDuringBuilds: true }
           }
-          EOT`
+          EOT
 
       - name: Install dependencies (thinkmate-rational)
         run: npm ci
@@ -58,7 +67,6 @@ jobs:
 
       - name: Build and export (thinkmate-rational)
         run: |
-          cd thinkmate
           npx next build
           npx next export -o out
         working-directory: thinkmate-rational
