--- a/.github/workflows/deploy-nextjs-to-pages.yml
+++ b/.github/workflows/deploy-nextjs-to-pages.yml
@@ -27,39 +27,7 @@ jobs:
           node-version: '18'
 
       - name: Prepare rational-only site
-        run: |
-          set -e
-          # Copy the thinkmate app and keep only the rational page as index
-          cp -R thinkmate thinkmate-rational
-          mkdir -p thinkmate-rational/tmp_pages
-          if [ -f thinkmate-rational/pages/_app.js ]; then mv thinkmate-rational/pages/_app.js thinkmate-rational/tmp_pages/; fi
-          # Prefer pages/rational.js if present; otherwise treat pages/index.js as the rational page
-          if [ -f thinkmate-rational/pages/rational.js ]; then
-            mv thinkmate-rational/pages/rational.js thinkmate-rational/tmp_pages/index.js
-          elif [ -f thinkmate-rational/pages/index.js ]; then
-            mv thinkmate-rational/pages/index.js thinkmate-rational/tmp_pages/index.js
-          fi
-          # If no rational page found, fail early (print listing for debugging)
-          if [ ! -f thinkmate-rational/tmp_pages/index.js ]; then
-            echo "rational page not found"
-            ls -la thinkmate-rational/pages || true
-            exit 1
-          fi
-          rm -rf thinkmate-rational/pages/*
-          mv thinkmate-rational/tmp_pages/* thinkmate-rational/pages/
-          rmdir thinkmate-rational/tmp_pages || true
-          # Determine repo name for Pages basePath (so assets reference /REPO/...) and create next.config.js
-          REPO_NAME=${GITHUB_REPOSITORY##*/}
-          cat > thinkmate-rational/next.config.js <<EOT
-          const path = require('path')
-          module.exports = {
-            outputFileTracingRoot: path.join(__dirname, '.'),
-            basePath: '/${REPO_NAME}',
-            assetPrefix: '/${REPO_NAME}/',
-            images: { unoptimized: true },
-            eslint: { ignoreDuringBuilds: true }
-          }
-          EOT
+        run: cd thinkmate
 
       - name: Install dependencies (thinkmate-rational)
         run: npm ci
