--- a/.github/workflows/deploy-nextjs-to-pages.yml
+++ b/.github/workflows/deploy-nextjs-to-pages.yml
@@ -11,72 +11,124 @@ permissions:
   id-token: write
 
 concurrency:
-  group: "thinkmate/pages"
-  cancel-in-progress: false
+  group: "deploy-rational"
+  name: Deploy Rational page to Pages
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
- - name: Detect package manager
-        id: detect-package-manager
-        run: |
-          if [ -f "${{ github.workspace }}/yarn.lock" ]; then
-            echo "manager=yarn" >> $GITHUB_OUTPUT
-            echo "command=install" >> $GITHUB_OUTPUT
-            echo "runner=yarn" >> $GITHUB_OUTPUT
-            exit 0
-          elif [ -f "${{ github.workspace }}/package.json" ]; then
-            echo "manager=npm" >> $GITHUB_OUTPUT
-            echo "command=ci" >> $GITHUB_OUTPUT
-            echo "runner=npx --no-install" >> $GITHUB_OUTPUT
-            exit 0
-          else
-            echo "Unable to determine package manager"
-            exit 1
-          fi
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-          cache: ${{ steps.detect-package-manager.outputs.manager }}
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
-        with:
-          # Automatically inject basePath in your Next.js configuration file and disable
-          # server side image optimization (https://nextjs.org/docs/api-reference/next/image#unoptimized).
-          #
-          # You may remove this line if you want to manage the configuration yourself.
-          static_site_generator: next
-      - name: Restore cache
-        uses: actions/cache@v4
-        with:
-          path: |
-            .next/cache
-          # Generate a new cache whenever packages or source files change.
-          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
-          # If source files changed but packages didn't, rebuild from a prior cache.
-          restore-keys: |
-            ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
-      - name: Install dependencies
-        run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
-      - name: Build with Next.js
-        run: ${{ steps.detect-package-manager.outputs.runner }} next build
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: ./out
+  on:
+    push:
+      branches: ["deploy/rational", "main"]
+    workflow_dispatch:
 
+  permissions:
+    contents: read
+    pages: write
+    id-token: write
 
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+  concurrency:
+    group: "deploy-rational"
+    cancel-in-progress: false
+
+  jobs:
+    build-and-export:
+      runs-on: ubuntu-latest
+      steps:
+        - name: Checkout
+          uses: actions/checkout@v4
+
+        - name: Detect package manager (for thinkmate/)
+          id: detect-package-manager
+          run: |
+            cd thinkmate || exit 1
+            if [ -f "pnpm-lock.yaml" ]; then
+              echo "manager=pnpm" >> $GITHUB_OUTPUT
+              echo "install=pnpm install --frozen-lockfile" >> $GITHUB_OUTPUT
+              echo "runner=pnpm exec" >> $GITHUB_OUTPUT
+            elif [ -f "yarn.lock" ]; then
+              echo "manager=yarn" >> $GITHUB_OUTPUT
+              echo "install=yarn install --frozen-lockfile" >> $GITHUB_OUTPUT
+              echo "runner=yarn run" >> $GITHUB_OUTPUT
+            elif [ -f "package-lock.json" ]; then
+              echo "manager=npm" >> $GITHUB_OUTPUT
+              echo "install=npm ci" >> $GITHUB_OUTPUT
+              echo "runner=npx --no-install" >> $GITHUB_OUTPUT
+            else
+              echo "manager=npm" >> $GITHUB_OUTPUT
+              echo "install=npm ci" >> $GITHUB_OUTPUT
+              echo "runner=npx --no-install" >> $GITHUB_OUTPUT
+            fi
+
+        - name: Setup Node
+          uses: actions/setup-node@v4
+          with:
+            node-version: '18'
+            cache: ${{ steps.detect-package-manager.outputs.manager }}
+
+        - name: Configure Pages helper
+          uses: actions/configure-pages@v5
+          with:
+            static_site_generator: next
+
+        - name: Restore .next cache
+          uses: actions/cache@v4
+          with:
+            path: |
+              thinkmate/.next/cache
+            key: ${{ runner.os }}-nextjs-${{ steps.detect-package-manager.outputs.manager }}-${{ hashFiles('thinkmate/pnpm-lock.yaml', 'thinkmate/yarn.lock', 'thinkmate/package-lock.json', 'thinkmate/**.[jt]s', 'thinkmate/**.[jt]sx') }}
+            restore-keys: |
+              ${{ runner.os }}-nextjs-${{ steps.detect-package-manager.outputs.manager }}-
+
+        - name: Prepare rational-only site
+          run: |
+            set -e
+            cp -R thinkmate thinkmate-rational
+            mkdir -p thinkmate-rational/tmp_pages
+            if [ -f thinkmate-rational/pages/_app.js ]; then mv thinkmate-rational/pages/_app.js thinkmate-rational/tmp_pages/; fi
+            if [ -f thinkmate-rational/pages/rational.js ]; then
+              mv thinkmate-rational/pages/rational.js thinkmate-rational/tmp_pages/index.js
+            elif [ -f thinkmate-rational/pages/index.js ]; then
+              mv thinkmate-rational/pages/index.js thinkmate-rational/tmp_pages/index.js
+            fi
+            if [ ! -f thinkmate-rational/tmp_pages/index.js ]; then
+              echo "rational page not found"
+              ls -la thinkmate-rational/pages || true
+              exit 1
+            fi
+            rm -rf thinkmate-rational/pages/*
+            mv thinkmate-rational/tmp_pages/* thinkmate-rational/pages/
+            rmdir thinkmate-rational/tmp_pages || true
+            REPO_NAME=${GITHUB_REPOSITORY##*/}
+            cat > thinkmate-rational/next.config.js <<EOT
+  const path = require('path')
+  module.exports = {
+    outputFileTracingRoot: path.join(__dirname, '.'),
+    basePath: '/${REPO_NAME}',
+    assetPrefix: '/${REPO_NAME}/',
+    images: { unoptimized: true },
+    eslint: { ignoreDuringBuilds: true }
+  }
+  EOT
+
+        - name: Install dependencies (thinkmate-rational)
+          run: ${{ steps.detect-package-manager.outputs.install }}
+          working-directory: thinkmate-rational
+
+        - name: Build and export (thinkmate-rational)
+          run: |
+            ${{ steps.detect-package-manager.outputs.runner }} next build
+            ${{ steps.detect-package-manager.outputs.runner }} next export -o out
+          working-directory: thinkmate-rational
+
+        - name: Upload artifact
+          uses: actions/upload-pages-artifact@v3
+          with:
+            path: thinkmate-rational/out
+
+    deploy:
+      needs: build-and-export
+      runs-on: ubuntu-latest
+      environment:
+        name: github-pages
+      steps:
+        - name: Deploy to GitHub Pages
+          id: deployment
+          uses: actions/deploy-pages@v4
