--- a/thinkmate/package.json
+++ b/thinkmate/package.json
@@ -17,8 +17,9 @@
     "express": "^5.1.0",
     "gsap": "^3.13.0",
     "lenis": "^1.3.15",
+    "mongodb": "^7.0.0",
     "motion": "^12.23.24",
-    "next": "15.5.3",
+    "next": "^15.5.7",
     "node-fetch": "^3.3.2",
     "ogl": "^1.0.11",
     "patch-package": "^8.0.1",
